[gd_scene load_steps=3 format=2]

[ext_resource path="res://media/progress_bar/white.jpg" type="Texture" id=1]
[ext_resource path="res://script/power_bar.gd" type="Script" id=2]

[node name="power_bar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_right = 0.033
anchor_bottom = 0.296
margin_right = 0.639999
margin_bottom = 0.320007
max_value = 2000.0
step = 2.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 3
tint_progress = Color( 1, 0.909804, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 60.0
text = "hold"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
